# tape-device

./: .gitignore  Cargo.toml  README.md  basm.sublime-syntax  debug_device.md  known_issues.md  language.md  piped_device.md  prepush.sh
.github/workflows/: rust.yml
examples/: divide.basm  fibonacci.basm  fibonacci.tasm  fizzbuzz.basm  fizzbuzz.str  fizzbuzz.tasm  hangman.basm  hello_world.basm  hello_world.tasm  hello_world_examples.basm  hello_world_examples.tasm  input_example.basm  input_example.tasm  multiply.basm  stack_example.basm  stack_example.tasm  tape_gen.basm  trivia.basm
misc/: tasm.sublime-syntax
src/: common.rs  constants.rs  lib.rs  main.rs  printer.rs  tape_reader.rs
src/assembler/: data.rs  data_parser.rs  debug_model.rs  mod.rs  program.rs  program_model.rs  strings.rs
src/assembler/data/: inner.rs  mod.rs  outer.rs
src/assembler/generator/: mod.rs
src/assembler/parser/: data_parser.rs  mod.rs
src/compiler/: data.rs  mod.rs  program.rs  strings.rs
src/debugger/: internals.rs  mod.rs  printer.rs  status_widget.rs
src/decompiler/: mod.rs
src/device/: debug_device.rs  input.rs  internals.rs  mod.rs  piped_device.rs  std_device.rs  util.rs
src/language/: mod.rs  ops.rs
src/language/parser/: mod.rs  ops.rs  params.rs
tests/: lib.rs
tests/execution/: mod.rs
tests/execution/multiple/: compare.rs  copy.rs  data.rs  file.rs  input.rs  jump.rs  logic.rs  math.rs  memory.rs  misc.rs  mod.rs  print.rs  stack.rs
tests/parsing/: mod.rs
tests/parsing/single/: mod.rs  reg_areg.rs  reg_reg.rs  reg_val.rs  regs_val.rs  val.rs
