[package]
name = "tape-device"
version = "1.0.0"
description = "Executor, compiler and decompiler for non existant tape device"
authors = ["Ray Britton <raybritton@gmail.com>"]
edition = "2018"
readme = "README.md"
license-file = "LICENSE"

[dependencies]
anyhow = "1.0.40"
clap = "2.33.3"
#ui dependencies
crossterm = "0.19.0"
scopeguard = "1.1.0"
tui = { git = "https://github.com/raybritton/tui-rs.git", branch = "scroll-from-bottom", default-features = false, features = ["crossterm"] }

[dev-dependencies]
tempfile = "3.2.0"
